# chat

./: .gitignore  CHANGELOG.md  Makefile  README.md  gen_avatar_david_key.py  gen_avatar_ifs.py  gen_avatar_lee_jacobs.py  gen_avatars.py  pyproject.toml
chatcore/: __init__.py  admin.py  config.py  data_store.py  llm.py  memory.py  persona.py  ratelimit.py  retrieval.py  scaffold.py  singleinstance.py
chatcore/templates/: .env.example  bot.service.template  ci.yml  deploy.yml
docs/: CREATING-A-BOT.md  OPTIONAL-MODULES.md  single-instance.md
scripts/: check_single_instance.sh  gen_avatar.py  roundtable.py  table_bot.py  table_tts.py
scripts/systemd/: check-single-instance.service  check-single-instance.timer  table-bot.service
tests/: conftest.py  test_admin.py  test_llm.py  test_memory.py  test_persona.py  test_ratelimit.py  test_retrieval.py  test_roundtable.py  test_scaffold.py  test_singleinstance.py  test_table_tts.py
tools/: update_all_bot_profiles.py
