[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "chatcore"
version = "0.1.0"
description = "Общее ядро для Telegram-чат-персона-ботов"
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot>=22,<23",
    "anthropic>=0.40",
    "httpx>=0.27",
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["chatcore*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
